# mirrordash-namnsdag

./: .gitignore  README.md  pyproject.toml
mirrordash_namnsdag/: config_schema.json  plugin.py
mirrordash_namnsdag/templates/: widget.html
mirrordash_namnsdag/translations/: en.json  sv.json
