[project]
name = "mirrordash-namnsdag"
version = "0.1.0"
description = "Swedish Name Day widget"
authors = [
    { name = "Menturan" }
]
dependencies = [
    "jinja2"
]

[project.entry-points."mirrordash.modules"]
mirrordash_namnsdag = "mirrordash_namnsdag.plugin:NamnsdagModule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mirrordash_namnsdag"]
